--- a/sources/Config/dev.ini
+++ b/sources/Config/dev.ini
@@ -1,4 +1,6 @@
 ;configuration pour le developpement
+[Installation]
+racineWeb = /club_sportif.com/sources/
 
 [BD]
 dsn = 'mysql:host=localhost;port=3306;dbname=BD_convocation;charset=utf8'
